--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "local-storage": "^2.0.0",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.1.2",
+    "react-scripts": "^3.3.0",
     "reactstrap": "^8.1.1"
   },
   "scripts": {
